# veles

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.ar.md  README.bn.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.pt-PT.md  README.ru.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  VISION.md  conftest.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  delegation-and-extensible-wiki.md
docs/adr/: 001-memory-storage.md  002-cli-surface.md
docs/ar/: index.md
docs/ar/explanation/: architecture.md  layout-packs-and-llm-wiki.md  modes.md  multi-agent-orchestration.md  project-memory-and-learning-loop.md  skills-and-tools.md  trust-and-sandbox.md
docs/ar/how-to/: backup-and-share.md  configure-providers.md  connect-telegram.md  external-mcp-servers.md  long-running-tasks.md  manage-skills-and-tools.md  multi-project-and-subprojects.md  per-task-routing.md  run-as-daemon.md  security-and-permissions.md
docs/ar/reference/: cli.md  configuration.md  providers.md  (+3 more)
docs/assets/: README.md  daemon-panel.tape  daemon-setup.tape  kb-ingest.tape  tui-daemon.tape  tui-hero.tape  tui-tour.tape
docs/audit/: 2026-07-05-implementation-plan-track-A-and-B-scope.md  2026-07-05-product-security-architecture-audit.md
docs/bn/: index.md
docs/en/: index.md
docs/es/: index.md
docs/fr/: index.md
docs/hi/: index.md
docs/it/: index.md
docs/ja/: index.md
docs/ko/: index.md
docs/pt-BR/: index.md
docs/pt-PT/: index.md
docs/ru/: index.md
docs/vi/: index.md
docs/zh-CN/: index.md
docs/zh-TW/: index.md
src/veles/: __init__.py  __main__.py
tests/: conftest.py  test_adapter_list_models.py  test_advisor.py  test_agent_approvals.py  test_agent_builder.py  test_agent_core.py  test_agent_empty_answer_guard.py  test_agent_event_listener.py  test_agent_events.py  test_agent_factory_overrides.py  test_agent_hooks.py  test_agent_system_prompt_refresh.py  test_agent_trace.py  test_agentops_module.py  test_agents_md_fixer.py  test_agents_md_normalizer.py  test_agents_md_schema.py  test_anthropic_adapter.py  test_approval_pending.py  test_approvals.py  test_ask_user.py  test_ask_user_options.py  test_autopilot.py  test_autopilot_audit.py  test_autopilot_egress_audit.py  test_background_ingest_ops.py  test_bare_layout_e2e.py  test_batch_insight_extractor.py  test_budget_state.py  test_builtin_skills.py  test_cache_hints.py  test_channel_session_persistence.py  test_channel_wizard.py  test_channels_cli.py  test_channels_daemon_client.py  test_channels_delivery.py  test_channels_display_tier.py  test_channels_in_process_backend.py  test_channels_mirror.py  test_channels_platform_registry.py  (+293 more)
tests/channels/: test_telegram_format.py  test_telegram_manager_event.py
tests/evals/: conftest.py  test_adversarial.py
tests/fixtures/: fake_mcp_server.py
tests/knowledge/: test_knowledge_freshness.py  test_notes.py  test_recall_about_veles.py  test_skeleton.py  test_store.py  test_veles_help_tool.py
tests/tui/: conftest.py  test_app_slash_integration.py  test_app_smoke.py  test_approval_screen.py  test_at_file_picker.py  test_bridge_active_project.py  test_bridge_prompters.py  test_chat_log_follow.py  test_chat_log_markdown.py  test_chat_read_mode.py  test_clipboard_bindings.py  test_completer.py  test_composer.py  test_composer_prompt.py  test_composer_shortcuts.py  test_daemon_log_screen.py  test_daemon_picker.py  test_daemon_picker_live_channels.py  test_daemon_row_formatter.py  test_daemon_tree_model.py  test_effective_provider.py  test_history.py  test_inspector.py  test_mode_chip_in_status_bar.py  test_mode_persists_on_boot.py  test_model_persists_on_boot.py  test_pickers.py  test_queue.py  test_save_insight_picker.py  test_select_mode.py  test_shift_tab_cycles_mode.py  test_slash_builtin.py  test_slash_insights.py  test_slash_inspector.py  test_slash_mode.py  test_slash_registry.py  test_slash_rules.py  test_status_bar_chips.py  test_status_bar_tokens.py  test_theme_bridge.py
(+796 files in other folders)
